<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="elements"
            type="ch.epfl.sweng.favors.authentication.AuthenticationProcess"
            />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/loginMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@{elements.headerText}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginMessageText" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField" />

        <TextView
            android:id="@+id/userFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{elements.requirementsText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordButton" />

        <Button
            android:id="@+id/authenticationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="@{(elements.isPasswordCorrect &amp;&amp; elements.isEmailCorrect)}"
            android:text="@{elements.validationButton}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <ImageView
            android:id="@+id/checkEmailImage"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.isEmailCorrect ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/emailTextField"
            app:layout_constraintStart_toEndOf="@+id/emailTextField"
            app:layout_constraintTop_toTopOf="@id/emailTextField"
            tools:layout_editor_absoluteY="106dp" />

        <ImageView
            android:id="@+id/checkPasswordImage"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.isPasswordCorrect ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/passwordTextField"
            app:layout_constraintStart_toEndOf="@+id/passwordTextField"
            app:layout_constraintTop_toTopOf="@id/passwordTextField"
            tools:layout_editor_absoluteY="106dp" />

        <Button
            android:id="@+id/resendConfirmationMailButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="176dp"
            android:text="@string/resendConfirmation"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authenticationButton" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="204dp"
            android:text="log out"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toEndOf="@+id/resendConfirmationMailButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkEmailImage"
            app:layout_constraintVertical_bias="0.36" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:enabled="@{elements.isEmailCorrect}"
            android:text="@string/resetPassword"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authenticationButton" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="84dp"
            android:layout_height="51dp"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="148dp"
            android:layout_marginStart="148dp"
            android:text="@string/next"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkEmailImage"
            app:layout_constraintVertical_bias="0.491" />

        <Button
            android:id="@+id/setUserInfo"
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:layout_marginBottom="39dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:text="Set up account"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toEndOf="@+id/resendConfirmationMailButton"
            app:layout_constraintTop_toBottomOf="@+id/checkEmailImage"
            app:layout_constraintVertical_bias="1.0" />


    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
