...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="ch.epfl.sweng.favors.authentication.SetUserInfo">

            <EditText
                android:id="@+id/userFirstNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:ems="10"
                android:hint="First name"
                android:inputType="textPersonName"
...
                    android:gravity="left"
                    android:padding="10sp"
                    android:text="F" />
            </RadioGroup>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
